<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_vehicle"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- TODO: CONVERT THIS TO A DROP DOWN WITH A FEW SELECTIONS (car_300x300, MOTORCYCLE, TRUCK, ?)-->
    <Spinner
        android:id="@+id/vehicle_type_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/vehicle_type_hint"
        android:entries="@array/vehicle_types"/>

    <EditText
        android:id="@+id/vehicle_vin_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vehicle_type_edittext"
        android:singleLine="true"
        android:inputType="textCapCharacters"
        android:hint="@string/vehicle_vin_hint"/>

    <EditText
        android:id="@+id/vehicle_plate_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vehicle_vin_edittext"
        android:singleLine="true"
        android:inputType="textCapCharacters"
        android:hint="@string/vehicle_plate_hint"/>

    <EditText
        android:id="@+id/vehicle_nickname_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vehicle_plate_edittext"
        android:singleLine="true"
        android:hint="@string/vehicle_nickname_hint"/>

    <EditText
        android:id="@+id/vehicle_year_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vehicle_nickname_edittext"
        android:inputType="number"
        android:singleLine="true"
        android:hint="@string/vehicle_year_hint"/>

    <EditText
        android:id="@+id/vehicle_make_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vehicle_year_edittext"
        android:singleLine="true"
        android:inputType="textCapCharacters"
        android:hint="@string/vehicle_make_hint"/>

    <EditText
        android:id="@+id/vehicle_model_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vehicle_make_edittext"
        android:singleLine="true"
        android:inputType="textCapCharacters"
        android:hint="@string/vehicle_model_hint"/>

    <EditText
        android:id="@+id/vehicle_color_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vehicle_model_edittext"
        android:singleLine="true"
        android:inputType="textCapCharacters"
        android:hint="@string/vehicle_color_hint"/>

    <EditText
        android:id="@+id/vehicle_notes_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vehicle_color_edittext"
        android:singleLine="true"
        android:hint="@string/vehicle_notes_hint"/>

</RelativeLayout>