<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:id="@+id/activity_main_add_vehicle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_vehicle_hint"
        android:onClick="onAddVehicle"/>

    <Button
        android:id="@+id/activity_main_add_fuel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_main_add_vehicle_button"
        android:text="@string/add_fuel_hint"
        android:onClick="onAddFuel"
        android:drawableTop="@drawable/gas_pump_clip_art_70x147"/>

    <Button
        android:id="@+id/activity_main_add_service_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_main_add_fuel_button"
        android:text="@string/add_service_hint"
        android:onClick="onAddService"/>

</RelativeLayout>
